# cuda-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  build.sh  nvcc.sh  rsync.sh  vecadd.cpp
CudaAddBiasRelu/: add_bias_relu  add_bias_relu.cu  use_tensor.h
CudaAddBiasRelu/base/: GPUTensor.cu  tensor  tensor.cu
CudaAppExample/: jetson-nano-prop  jetson-nano-prop.cu
CudaVecAdd/: vecadd  vecadd.cu
base/: GPUTensor.cu  GPUTensor.cuh  GPUTensor.h  GPUTensor.hpp  logger.cpp  logger.h  use_tensor.h
gpu_properties/: check_gpu_properties.cu
ops/: add_bias_relu.cu  gemm.cu  kernels.cuh  reduce_sum.cu  transpose.cu  vec_add.cu
test/: add_bias_relu.cu  test_add_bias_relu.cu  test_arg_max.cu  test_gemm.cu  test_reduce_sum.cu  test_transpose.cu  test_vec_add.cu
tmp/: g++.sh  rsync.sh  test_logger.cpp
